[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aska"
version = "0.1.0"
description = "Base for python libs"
authors = [{name = "Gustavo Delai Onzi Da Silva", email = "gustavodelai111317@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
]
urls = { "Homepage" = "https://github.com/GustavoDelaiOnzi/project" }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4,<9.0",
    "flake8>=7.1.1,<8.0",
    "black>=25.1.0,<26.0",
    "isort>=6.0.0,<7.0",
    "commitizen>=4.2.1,<5.0",
    "pre-commit>=4.1.0,<5.0",
    "pytest>=8.3.4,<9.0",
    "pytest-mock>=3.14.0,<4.0",
    "pytest-cov>=6.0.0,<7.0",
    "twine>=6.1.0,<7.0",
    "build>=1.2.2,<2.0"
]

[tool.setuptools]
license-files = ["LICEN[CS]E*"]

[tool.setuptools.packages.find]
include = ["aska"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true